compiling_error.txt
/home/nic/original-projects/machine learning/id3/test.cpp:8:6: error: ‘vector’ in namespace ‘std’ does not name a template type
 std::vector<std::string> split(const std::string &text, std::string sep) {
      ^
/home/nic/original-projects/machine learning/id3/test.cpp:24:30: error: ‘vector’ is not a member of ‘std’
 std::string prepareSqlString(std::vector<std::string> v)
                              ^
/home/nic/original-projects/machine learning/id3/test.cpp:24:53: error: expected primary-expression before ‘>’ token
 std::string prepareSqlString(std::vector<std::string> v)
                                                     ^
/home/nic/original-projects/machine learning/id3/test.cpp:24:55: error: ‘v’ was not declared in this scope
 std::string prepareSqlString(std::vector<std::string> v)
                                                       ^
/home/nic/original-projects/machine learning/id3/test.cpp:25:1: error: expected ‘,’ or ‘;’ before ‘{’ token
 {
 ^
